# Foton

./: .gitignore  2023-11-13-task.docx  ~$23-11-13-task.docx
CMake/Task2/: CMakeLists.txt  main.cpp
Solution/: Task2.sln
Solution/T2/: T2.cpp
Task1/BrightnessSolution/: BrightnessSolution.sln
Task1/BrightnessSolution/GettingBrightnessValues/: GettingBrightnessValues.cpp  GettingBrightnessValues.vcxproj  GettingBrightnessValues.vcxproj.filters  main.cpp
Task1/T1/: T1.sln
Task1/T1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
Task2/T2/: T2.cpp  T2.vcxproj
haar/: HH_data.txt  HL_data.txt  HL_data_1.txt  LH_data.txt  LL_data.txt  haar_script.txt  impulse_noise.cpp  main.cpp  median_filter.cpp  median_script.txt  script.txt  Отчет.docx
haar/base_txt_data/: LL_data_1.txt  LL_data_2.txt  LL_data_3.txt
haar/txt_data/: HH_data_1.txt  HH_data_3.txt  LH_data_2.txt
haar/txt_data_1/: HH_data_1.txt  HH_data_2.txt  HH_data_3.txt  HL_data_1.txt  HL_data_2.txt  HL_data_3.txt  HL_data_4.txt  LH_data_1.txt  LH_data_2.txt  LH_data_3.txt  LL_data_1.txt  LL_data_2.txt  LL_data_3.txt  LL_data_4.txt
haar/txt_data_2/HH/: HH_data_1.txt  HH_data_2.txt  HH_data_3.txt  HL_data_1.txt  HL_data_2.txt  HL_data_3.txt  LH_data_1.txt  LH_data_2.txt  LH_data_3.txt  LL_data_1.txt  LL_data_2.txt  LL_data_3.txt
haar/txt_data_2/HL/: HH_data_1.txt  HH_data_2.txt  HH_data_3.txt  (+9 more)
haar/Отчёты/: Отчёт_новый_уровень.docx
Новые задания/Решения/Task11/CMake/: CMakeLists.txt  main.cpp
Специальное задание/: задание.txt
Старые задания/: ~$23-11-13-task.docx
(+336 files in other folders)
